<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/imagen_del_sistema1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/fondo3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="237dp"
                android:contentDescription="@string/imagen_del_sistema2"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="293dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="40dp"
                    android:background="#bbffffff"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <EditText
                        android:id="@+id/tx_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/usuario"
                        android:inputType="text" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="37dp" />

                    <EditText
                        android:id="@+id/tx_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:ems="10"
                        android:hint="@string/contrase_a"
                        android:inputType="textPassword" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="31dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:background="#496171db"
                        android:onClick="irMenuPrincipal"
                        android:text="@string/inicio_de_sesi_n" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</android.support.constraint.ConstraintLayout>